# translator

./: README.md  pyproject.toml  translate.py
